--- a/OEBPS/Styles/boilerplate.css
+++ b/OEBPS/Styles/boilerplate.css
@@ -377,5 +377,6 @@ p:hover .gg-link {
   visibility: visible;
 }
 .shu-ming {
-  text-decoration: currentColor wavy underline 1px;
+  text-decoration: currentColor wavy underline;
+  text-decoration-thickness: 1px;
 }
