--- a/OEBPS/Styles/Layout01.css
+++ b/OEBPS/Styles/Layout01.css
@@ -1,6 +1,6 @@
 @font-face {
-  src: url(../NotoSerifTC-Medium.otf);
-  font-family: "Noto Serif TC Medium";
+  src: url(../NotoSerifSC-Medium.otf);
+  font-family: "Noto Serif SC Medium";
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
