--- a/OEBPS/Styles/Layout01.css
+++ b/OEBPS/Styles/Layout01.css
@@ -19,6 +19,13 @@
   font-style: normal;
   font-stretch: normal;
 }
+@font-face {
+  src: url(../biaodian.otf);
+  font-family: "biaodian";
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+}
 
 /*
 	Dreamweaver 流變格線屬性
