--- a/OEBPS/Styles/boilerplate.css
+++ b/OEBPS/Styles/boilerplate.css
@@ -376,7 +376,7 @@ p:before{
 p:hover .gg-link {
   visibility: visible;
 }
-.shu-ming {
+/*.shu-ming {
   text-decoration: currentColor wavy underline;
   text-decoration-thickness: 1px;
-}
+}*/
