--- a/OEBPS/Styles/boilerplate.css
+++ b/OEBPS/Styles/boilerplate.css
@@ -376,10 +376,10 @@ p:before{
 p:hover .gg-link {
   visibility: visible;
 }
-/*.shu-ming {
-  text-decoration: currentColor wavy underline;
+.shu-ming {
+  text-decoration: #777 wavy underline;
   text-decoration-thickness: 1px;
-}*/
+}
 h2 {
   font-size: large;
   letter-spacing: 3px;
